k8s/estetica-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: estetica-metrics
  namespace: est-app
  labels:
    app: estetica-app
spec:
  ports:
    - port: 9113
      targetPort: 9113
      protocol: TCP
      name: http
  selector:
    app: estetica-app
