k8s/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  type: ExternalName
  externalName:  192.168.100.1 # Substitua pelo IP real da sua máquina
