k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: est-app
  name: frontend-service
spec:
  selector:
    app: frontend-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: NodePort  # Expor via IP do nó, útil para testes locais
