k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: estetica-app-service
spec:
  selector:
    app: estetica-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
